--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>Reviews</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link href="reviewStyle.css" rel="stylesheet">
   </head>
   <body>
-  <div id="app">Waiting for react to load</div>
+  <div id="app">Waiting for reviews to load</div>
   <script type="text/javascript" src="./dist/bundle.js"></script>
   <acript>
   </acript>
